--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,9 +20,15 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.25'
-
+    
+    - name: Install Task
+      uses: arduino/setup-task@v2
+      with:
+        version: 3.x
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+    
     - name: Build
-      run: go build -v ./...
+      run: task build
 
     - name: Test
-      run: go test -v ./...
+      run: task test
