更新Taskfile.yml中的环境变量配置，修复OEXPERIMENT拼写错误，更新pgo

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,10 +2,11 @@
 
 version: "3"
 
+env:
+  GOEXPERIMENT: greenteagc,jsonv2
+
 tasks:
   build:
-    env:
-      OEXPERIMENT: greenteagc
     cmds:
       - task: build_linux_amd64
       - task: build_linux_arm64
